Fixed display menu tab colour visible issue.

--- a/styles/base/_views.scss
+++ b/styles/base/_views.scss
@@ -262,6 +262,7 @@
     &.open {
       a {
         background: var(--gin-bg-layer2);
+        color: var(--gin-color-primary);
 
         &:hover, &:focus, &:active {
           color: var(--gin-color-primary);
